Fix embedded images overflow on mobile

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -71,6 +71,8 @@ body.page {
 
   div.article-content {
     margin-top: 35px;
+
+    padding: 0;
   }
 
   aside {
@@ -79,19 +81,20 @@ body.page {
 
   article {
 
+    padding: 0 10px;
+
     h1 {
       margin-bottom: 25px;
     }
 
     figure {
-      max-width: 100%;
+      max-width: 100% !important;
       height: auto;
       margin: 18px auto;
     }
 
     img {
-      width: 100%;
-      max-width: 100%;
+      max-width: 100% !important;
       height: auto;
     }
 
